src/test/deca/context/valid/thibault/optimisation/testOpt4.deca
{
	float a=0;
	float b;

	b=a;
}
