src/test/deca/context/invalid/thibault/testAssign2.deca
{
int a;
boolean b=true;
a=b;
}